Send type correctly
